--- a/client/package.json
+++ b/client/package.json
@@ -13,13 +13,16 @@
     "@nextui-org/react": "^2.4.8",
     "axios": "^1.7.7",
     "framer-motion": "^11.5.6",
+    "jwt-decode": "^4.0.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-hook-form": "^7.53.0",
     "react-router-dom": "^6.26.2",
     "sweetalert": "^2.1.2"
   },
   "devDependencies": {
     "@eslint/js": "^9.9.0",
+    "@types/jwt-decode": "^3.1.0",
     "@types/react": "^18.3.3",
     "@types/react-dom": "^18.3.0",
     "@vitejs/plugin-react": "^4.3.1",
